<resources>
    <string name="app_name">Nintendo Preços</string>
    <string name="action_settings">Settings</string>
    <string name="menu_title_home">Home</string>
    <string name="menu_title_favorites">Favoritos</string>
    <string name="menu_title_search">Pesquisar</string>
    <string name="title_activity_main2">MainActivity2</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="transition_filter_name">filterTransition</string>
    <string name="filter_name">Filtrar</string>
    <string name="calendar_games">Calendario</string>
    <string name="text_error">Algo deu errado :(</string>
    <string name="refresh_text">Tentar novamente</string>
    <string name="shared_item_transition">imageGame</string>
    <string name="title_home">Início</string>
    <string name="title_search">Pesquisar</string>
    <string name="title_detail">Detalhes</string>
    <string name="menu_favorite">Favoritar</string>
    <string name="chip_title_all">Tudo</string>
    <string name="chip_title_sales">Promoções</string>
    <string name="chip_title_coming_soon">Em breve</string>
    <string name="chip_title_new_releases">Novos lançamentons</string>
    <string name="notify_me">Notificar promoção</string>
    <!-- Strings used for fragments for navigation -->
</resources>