<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            android:background="?attr/colorSurface"
            android:elevation="0dp"
            app:layout_scrollFlags="enterAlwaysCollapsed|scroll"
            app:titleTextAppearance="@style/TextAppearance.AppCompat.Title"
            app:title="@string/app_name"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize" />

    </com.google.android.material.appbar.AppBarLayout>

    <ViewFlipper
        android:id="@+id/flipper_games"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <include
            android:id="@+id/fragment_game_shimmer"
            layout="@layout/fragment_game_shimmer" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <HorizontalScrollView
                android:id="@+id/horizontal_scroll"
                android:clipToPadding="false"
                android:scrollbars="none"
                android:paddingHorizontal="@dimen/fab_margin"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="wrap_content">
                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    app:singleLine="true"
                    app:selectionRequired="true"
                    app:singleSelection="true"
                    app:checkedChip="@+id/chip_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_all"
                        android:text="@string/chip_title_all"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_sales"
                        android:text="@string/chip_title_sales"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_news"
                        android:text="@string/chip_title_coming_soon"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                    <com.google.android.material.chip.Chip
                        android:id="@+id/chip_new_releases"
                        android:text="@string/chip_title_new_releases"
                        style="@style/Widget.Material3.Chip.Filter"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>

                </com.google.android.material.chip.ChipGroup>
            </HorizontalScrollView>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerview"
                android:layout_marginHorizontal="8dp"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layoutManager="androidx.recyclerview.widget.StaggeredGridLayoutManager"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/horizontal_scroll"
                app:spanCount="2"
                tools:listitem="@layout/item_game" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <include
            android:id="@+id/fragment_game_error"
            layout="@layout/fragment_game_error" />
    </ViewFlipper>
</androidx.coordinatorlayout.widget.CoordinatorLayout>